# Addressable

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: health.py  listings.py  locations.py  providers.py  search.py
backend/app/core/: errors.py  logging.py  settings.py
backend/app/db/: engine.py  init.sql  session.py
backend/app/db/migrations/: alembic.ini  env.py
backend/app/db/migrations/versions/: 001_initial_schema.py
backend/app/models/: __init__.py  listing.py  listing_source.py  provider_run.py  raw_payload.py  search_query.py
backend/app/providers/: __init__.py  base.py  csv_import.py  mock.py  outlink.py  realtor.py  redfin.py  zillow.py
backend/app/schemas/: __init__.py  common.py  listing.py  location.py  provider.py  search.py
backend/app/services/: __init__.py  deduplication.py  location.py  normalization.py  provider_manager.py  search.py
backend/app/tests/: conftest.py  test_deduplication.py  test_normalization.py  test_providers.py  test_search_criteria.py
backend/app/workers/: tasks.py
frontend/: jest.config.js  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: SearchForm.tsx
frontend/app/components/__tests__/: SearchForm.test.tsx
frontend/app/lib/: api.ts
frontend/app/property/[id]/: page.tsx
frontend/app/search/: page.tsx
